# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: brain_engine.py  cli.py  even_check_code.py
brain_games/games/: answer.py  brain_engine.py  calc.py  even.py  gcd.py  prime.py  progression.py  welcome.py
brain_games/games/calc/: calc.py
brain_games/games/even/: even.py
brain_games/games/gcd/: gcd.py
brain_games/games/prime/: prime.py
brain_games/games/progression/: progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
