[tool.poetry]
name = "brain-games"
version = "0.1.1"
description = "This game will test your mental abilities."
authors = ["Vladimir Popchenko <pwd70@mail.ru>"]
readme = "README.md"
packages = [{include = "brain_games" },]
repository = "https://github.com/Vlad-i-mir70/python-project-49"
classifiers = [
    "Topic :: Games/Entertainment"
]
[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
